# gridswifts-football-stats

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FOOTBALL_RULES.md  PROJECT_VISION.md  PROMPT_FOR_CLAUDE_CODE.md  README.md  ROADMAP.md  UI_GUIDELINES.md  footballIQ.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/01_Project/: 01_ProjectVision.md
docs/02_Product/: 02_ProductRequirements.md
docs/03_Football/: 03_FootballSpecification.md  04_PlayTypes.md
docs/04_Architecture/: 04_Architecture.md
docs/05_Database/: 05_Database.md
docs/06_UI/: 06_UI_DesignSystem.md
docs/07_Sprints/: Sprint_2.1.1_Implementation.md  Sprint_2.1.1_SmartPlayEditor.md  Sprint_2.1.2_EventStoreFoundation.md  Sprint_2.1.2_ProductionIntegration.md  Sprint_2.1.3_SaveFlowFix.md  Sprint_2.1.3_SmartPlayEngine.md  Sprint_2.1.4_Timeline_Manager.md  Sprint_2.1.6_FieldPositionEngine.md  Sprint_2.1.6a_KickoffVisualizationFix.md
docs/08_Testing/: 09_TestPlan.md
docs/09_Broadcast/: 08_BroadcastVision.md
docs/engine/: FOOTBALL_ENGINE_2.1.0.md  MANUAL_TESTS_2.1.0.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src/components/: Shell.tsx
src/features/games/: GamesPage.tsx
src/features/scoring/: LiveScoringPage.tsx  SmartPlayEditor.tsx
src/features/teams/: TeamsPage.tsx
src/lib/: api.ts
(+19 files in other folders)
