[package]
name = "gridswifts_football_stats"
version = "2.0.0"
edition = "2021"

[lib]
name = "gridswifts_football_stats_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
